bdd fixes - add BmiCategory